cabal-version: 2.4
name: wai-csrf
version: 0.1
license: Apache-2.0
license-file: LICENSE
extra-source-files: README.md CHANGELOG.md
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Renzo Carbonara, 2025
category: Web
build-type: Simple
synopsis: Cross-site request forgery protection for WAI
description: Cross-site request forgery protection for WAI
homepage: https://github.com/k0001/hs-wai-csrf
bug-reports: https://github.com/k0001/hs-wai-csrf/issues
tested-with: GHC == 9.8.1

common basic
  default-language: GHC2021
  build-depends: base == 4.*
  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies
    ViewPatterns


library
  import: basic
  ghc-options: -O2 -Wall
  hs-source-dirs: lib
  exposed-modules:
    Wai.CSRF
  build-depends:
    bytestring,
    case-insensitive,
    cookie,
    crypton,
    http-types,
    memory,
    time,
    wai,

test-suite test
  import: basic
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -threaded -with-rtsopts=-N
  build-depends:
    bytestring,
    cookie,
    http-types,
    wai,
    wai-csrf,
    wai-extra,

